# mcp-weather-server-demo

./: .gitignore  LICENSE  README.md  pyproject.toml  weather.py
server/: main.py
